--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -944,6 +944,9 @@ input[type='button'],
 
 .work-item {
   margin: 0 0 _size(element-margin) 0;
+  // height: 100%;
+  height:400px;
+  width: 50%;
 
   .image {
     margin: 0 0 (_size(element-margin) * 0.75) 0;
@@ -985,7 +988,8 @@ input[type='button'],
 
   .image.avatar {
     margin: 0 0 (_size(element-margin) * 0.5) 0;
-    width: 6.25em;
+    width: 6em;
+    height: 6em
 	}
 	
 	
@@ -1078,8 +1082,11 @@ input[type='button'],
 		font-size: 23px;
 	}
 	#name {
-		font-size: 40px;
-		margin-bottom: 5px;
+    font-size: 42px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    // border-bottom: 2px solid #666666;
+    width: 30%;
 	}
 
 
