--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,13 +10,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-
 @import 'libs/skel';
 
 @include skel-breakpoints(
   (
-    xlarge: '(max-width: 1800px)',
-    large: '(max-width: 1280px)',
+    xlarge: '(max-width: 2400px)',
+    large: '(max-width: 1500px)',
     medium: '(max-width: 980px)',
     small: '(max-width: 736px)',
     xsmall: '(max-width: 480px)',
@@ -50,17 +49,18 @@
 $size-header-width: 30%;
 $size-header-pad: 4em;
 
-html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* Basic */
 
 body {
-	background: _palette(bg);
+  background: _palette(bg);
 
   &.is-loading {
     *,
@@ -476,7 +476,7 @@ input[type='radio'] {
   }
 
   &.fa-envelope-o {
-		font-size: 15px;
+    font-size: 15px;
   }
 }
 
@@ -544,7 +544,6 @@ input[type='radio'] {
     }
   }
 
-
   img {
     border-radius: _size(border-radius);
     display: block;
@@ -590,7 +589,7 @@ input[type='radio'] {
 
     img {
       border-radius: 100%;
-			width: 100%;
+      width: 100%;
     }
   }
 }
@@ -746,7 +745,7 @@ ul {
       h3 {
         color: _palette(fg-light);
         left: 0;
-				position: absolute;
+        position: absolute;
         top: 5px;
         width: 1em;
         font-size: 18px;
@@ -756,19 +755,18 @@ ul {
 }
 
 #contact-me-content {
-	font-size: 18px;
-	padding: 0px;
-	margin-bottom: 10px;
+  font-size: 18px;
+  padding: 0px;
+  margin-bottom: 10px;
 }
 
 #address-icon {
-	top:0px;
+  top: 0px;
 }
 
 #contact-info {
-	font-size: 15px;
+  font-size: 15px;
 }
-
 
 dl {
   margin: 0 0 _size(element-margin) 0;
@@ -944,7 +942,7 @@ input[type='button'],
 
 .work-item {
   margin: 0 0 _size(element-margin) 0;
-  height:400px;
+  height: 400px;
   width: 50%;
   padding-left: 45px;
 
@@ -989,19 +987,19 @@ input[type='button'],
   top: 0;
   width: $size-header-width;
 
-
   #logo {
     height: 5.2em;
     width: 6em;
     overflow: hidden;
   }
-  
-	
-	#about-me, #projects, #contact-me {
-		color: _palette(accent2, fg);
-		margin-top: 25px;
-		font-size: 22px;
-	}
+
+  #about-me,
+  #projects,
+  #contact-me {
+    color: _palette(accent2, fg);
+    margin-top: 25px;
+    font-size: 22px;
+  }
 }
 
 /* Footer */
@@ -1060,42 +1058,36 @@ input[type='button'],
       border-top: 0;
       margin-top: 0;
       padding-top: 0;
-		}
-		> header {
-			> h2 {
-				margin-left: 5px
-			}
-		}
+    }
+    > header {
+      > h2 {
+        margin-left: 5px;
+      }
+    }
 
-		> div {
-			> ul {
-				margin-left: 15px;
-				font-size: 18px;
+    > div {
+      > ul {
+        margin-left: 15px;
+        font-size: 18px;
 
-				> li {
-					padding-bottom: 5px;
-				}
-			}
+        > li {
+          padding-bottom: 5px;
+        }
+      }
+    }
+  }
 
-
-		}
-	}
-
-	
-	#learning {
-		font-size: 23px;
-	}
-	#name {
+  #learning {
+    font-size: 23px;
+  }
+  #name {
     font-size: 42px;
     padding-bottom: 5px;
     margin-bottom: 5px;
     // border-bottom: 2px solid #666666;
     width: 30%;
-	}
-
-
+  }
 }
-
 
 /* Poptrox */
 
@@ -1284,11 +1276,51 @@ body.is-touch {
 @include breakpoint(xlarge) {
   /* Basic */
 
-  body,
-  input,
-  select,
-  textarea {
-    font-size: 12pt;
+  $size-header-width: 30%;
+  $size-header-pad: 3em;
+
+  /* Header */
+
+  #header {
+    padding: ($size-header-pad * 2) $size-header-pad $size-header-pad
+      $size-header-pad;
+    width: $size-header-width;
+
+    h1 {
+      font-size: 1.25em;
+
+      br {
+        display: none;
+      }
+    }
+  }
+
+  /* Footer */
+
+  #footer {
+    .copyright {
+      li {
+        border-left-width: 0;
+        display: block;
+        line-height: 2.25em;
+        margin-left: 0;
+        padding-left: 0;
+      }
+    }
+  }
+
+  /* Main */
+
+  #main {
+    margin-left: $size-header-width;
+    max-width: none;
+    padding: ($size-header-pad * 2) $size-header-pad $size-header-pad
+      $size-header-pad;
+    width: calc(100% - #{$size-header-width});
+  }
+
+  .work-item {
+    margin-bottom: 200px;
   }
 }
 
@@ -1336,9 +1368,12 @@ body.is-touch {
     padding: ($size-header-pad * 2) $size-header-pad $size-header-pad
       $size-header-pad;
     width: calc(100% - #{$size-header-width});
-	}
-}
+  }
 
+  .work-item {
+    margin-bottom: 50px;
+  }
+}
 /* Medium */
 
 @include breakpoint(medium) {
@@ -1424,10 +1459,7 @@ body.is-touch {
     margin: 0;
     padding: ($size-header-pad * 1.5) $size-header-pad;
     width: 100%;
-	}
-	
-
-
+  }
 }
 
 /* Small */
@@ -1462,11 +1494,11 @@ body.is-touch {
     &.major {
       h2 {
         font-size: 1.35em;
-			}
-			
-			li {
-				font-size: 0.8em;
-			}
+      }
+
+      li {
+        font-size: 0.8em;
+      }
     }
   }
 
@@ -1608,6 +1640,3 @@ body.is-touch {
     width: 100%;
   }
 }
-
-
-
