--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1063,6 +1063,7 @@ input[type='button'],
     > header {
       > h2 {
         margin-left: 5px;
+        font-size: 2.3rem;
       }
     }
 
@@ -1079,7 +1080,7 @@ input[type='button'],
   }
 
   #learning {
-    font-size: 23px;
+    font-size: 1.6rem;
   }
   #name {
     font-size: 42px;
