changed the css setting for media screen max-width 480px

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1433,6 +1433,15 @@ body.is-touch {
 }
 
 @media screen and (max-width: 480px) {
+  .\36 u,
+  .\36 u24,
+  .\38 u,
+  .\38 u24,
+  .\34 u,
+  .\34 u24 {
+    width: 100%;
+  }
+
   #main {
     #name {
       font-size: 2em;
@@ -1442,7 +1451,10 @@ body.is-touch {
     section {
       header {
         h2 {
-          font-size: 1.5em;
+          font-size: 1.1em;
+        }
+        #learning{
+          font-size: 0.8em;
         }
       }
     }
@@ -1450,7 +1462,7 @@ body.is-touch {
 
   .work-item {
     p {
-      font-size: 20px;
+      font-size: 0.9em;
     }
   }
 }
